# feedback-board-v0

./: .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  cdm.json  index.html  package.json  vite.config.ts
contracts/feedback/: Cargo.toml  lib.rs
src/: App.css  App.tsx  types.ts  utils.ts
