[package]
name = "feedback"
version.workspace = true
edition.workspace = true
description = "Decentralized feedback board contract — stores feedback CIDs from Bulletin Chain"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "feedback"
path = "lib.rs"

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[package.metadata.cdm]
package = "@example/feedback"

[dependencies]
pvm-contract-sdk = { workspace = true }
polkavm-derive = { workspace = true }
picoalloc = { workspace = true }
